added assets to side kick

--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -2,6 +2,17 @@
   "project": "Geeks Edge Deliver Services",
   "plugins": [
     {
+      "id": "asset-library",
+      "title": "AEM Assets",
+      "environments": ["edit", "dev"],
+      "url": "https://experience.adobe.com/solutions/CQ-assets-selectors/static-assets/resources/franklin/asset-selector.html",
+      "paletteRect": "top: 50px; bottom: 10px; right: 10px; left: auto; width:400px; height: calc(100vh - 60px)",
+      "passConfig": true,
+      "passReferrer": true,
+      "includePaths": ["**.docx**"],
+      "isPalette": true
+    },
+    {
       "id": "google-assist",
       "title": "google Assist",
       "environments": ["edit", "dev", "preview", "live", "prod"],
