--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -4,7 +4,7 @@
     {
       "id": "asset-library",
       "title": "AEM Assets",
-      "environments": ["edit", "dev"],
+      "environments": ["edit", "dev", "preview", "live", "prod"],
       "url": "https://experience.adobe.com/solutions/CQ-assets-selectors/static-assets/resources/franklin/asset-selector.html",
       "paletteRect": "top: 50px; bottom: 10px; right: 10px; left: auto; width:400px; height: calc(100vh - 60px)",
       "passConfig": true,
