--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -2,6 +2,24 @@
   "project": "Geeks Edge Deliver Services",
   "plugins": [
     {
+      "id": "contact-us-palette",
+      "title": "Contact Us Palette",
+      "environments": ["edit"],
+      "url": "/tools/contactus/contactus.html",
+      "isPalette": true,
+      "passConfig": true,
+      "passrefere": true,
+      "paletteRect": "top: 50px; bottom: 10px; right: 10px; left: auto; width:400px; height: calc(100vh - 60px)"
+    },
+    {
+      "id": "contact-us-page",
+      "title": "Contact Us Page",
+      "environments": ["edit"],
+      "url": "/tools/contactus/contactus.html",
+      "passConfig": true,
+      "passrefere": true
+    },
+    {
       "id": "asset-library",
       "title": "AEM Assets",
       "environments": ["edit", "dev", "preview", "live", "prod"],
