--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -63,7 +63,7 @@
       "id": "sidekick-library",
       "title": "Library",
       "environments": ["edit", "dev"],
-      "url": "tools/sidekick/library.html",
+      "url": "/tools/sidekick/library.html",
       "includePaths": ["**.docx**"]
     }
   ]
